Add Info about Chaitanya

--- a/try.html
+++ b/try.html
@@ -234,8 +234,8 @@
 		</div>
 		<div id="member1" class="norm step mem" data-x="700" data-y="8000" data-z="14500" data-rotate-y="60" data-rotate-z="0" data-rotate-x="00" data-scale="1">
 			<center>
-			<img src="minion.jpg" width="300px">
-			<h1 class="head3">nameas sdfaw</h1>
+			<img src="images/members/chaitanya.jpg" width="300px">
+			<h1 class="head3">Chaitanya Yadav</h1>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
 					<img src='images/social/github.png'>
