--- a/try.html
+++ b/try.html
@@ -6,139 +6,7 @@
 	<title>Geekhaven</title>
 
 	<script src="js/main.js"></script>
-	<style type="text/css">
-
-		body{
-			background: -webkit-gradient(radial, 50% 50%, 250, 50% 50%, 750, from(#fff), to(#efefef));
-		}
-		a{
-			color: slategrey;
-			text-decoration: none;
-			transition: color .3s;
-		}
-		a:hover{
-			color: black;
-		}
-
-		.fallback-message {
-		    font-family: sans-serif;
-		    line-height: 1.3;
-
-		    width: 780px;
-		    padding: 10px 10px 0;
-		    margin: 20px auto;
-
-		    border: 1px solid #E4C652;
-		    border-radius: 10px;
-		    background: #EEDC94;
-		}
-
-		.fallback-message p {
-		    margin-bottom: 10px;
-		}
-
-		.impress-supported .fallback-message {
-		    display: none;
-		}
-
-		.impress-enabled .step {
-		    margin: 0;
-		    opacity: 0.3;
-
-		    -webkit-transition: opacity 1s;
-		    -moz-transition:    opacity 1s;
-		    -ms-transition:     opacity 1s;
-		    -o-transition:      opacity 1s;
-		    transition:         opacity 1s;
-		}
-
-		.impress-enabled .step.active { opacity: 1 }
-
-		.impress-enabled          { pointer-events: none }
-		.impress-enabled #impress {
-			pointer-events: auto }
-
-		.norm {
-
-		  	width: 1200px;
-		}
-
-		.head1 {
-			margin: 0px;
-			margin-top: 10px;
-			font-size: 400%;
-			font-family: serif;
-		}
-		.head3 {
-			margin: 10px;
-		}
-
-		body {
-			font-family: 'Open Sans', sans-serif;
-			font-size: 30px;
-		}
-		.image_cordi{
-			float:right;
-			width: 300px;
-		}
-
-		#pre-loader{
-			background-color: white;
-			z-index: 1000;
-			position: fixed;
-			right: 0px;
-			left: 0px;
-			top: 0px;
-			bottom: 0px;
-			opacity: 1;
-			transition: opacity .6s;
-		}
-
-		#pre-loader img{
-			height: 10vh;
-			position: absolute;
-			top: 45vh;
-			bottom: 45vh;
-		}
-		.hint{
-			opacity: 0;
-			width: 90%;
-			text-align: center;
-			background-color: rgba(0, 0, 0, 0.4);
-			padding: 3px;
-			color: white;
-			border-radius: 10px;
-			border: 1px solid black;
-			animation-name: hinty;
-			animation-iteration-count: infinite;
-			animation-duration: 10s;
-		}
-		@keyframes hinty {
-			40%{
-				opacity: 0;
-			}
-			50%{
-				opacity: 1;
-			}
-			70%{
-				opacity: 1;
-			}
-			80%{
-				opacity: 0;
-			}
-		}
-		.hint h3{
-			margin: 10px;
-		}
-		.contact_links img{
-			width: 60px;
-		}
-		.mem .contact_links img{
-			width: 50px;
-		}
-
-
-	</style>
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body class="impress-not-supported" >
@@ -157,7 +25,8 @@
 	<div id="impress">
 		<div id = "start_ok" class="step norm" data-x="0" data-y="0" data-z="0" data-scale="8">
 			<center>
-				<span><p class="head1">Networking wing </p><h5 class="head3"> <b>Geekhaven</b>, IIIT Allahabad</h5><hr width="60%"></span><br>
+				<span><p class="head1">Web Development wing </p><h5 class="head3"> <b>Geekhaven</b>, IIIT Allahabad</h5><hr width="60%"></span><br>
+				<br>
 			</center>
 			<span>
 				<h2><a href="#about_us">About Us</a></h2>
@@ -197,7 +66,7 @@
 			<h1 class="head1">Co-ordinators</h1>
 		</div>
 		<div id="cordi1" class="norm step" data-x="-9000" data-y="1000" data-z="-500" data-rotate-y="30" data-rotate-z="0" data-rotate-x="0" data-scale="2 ">
-			<img src="minion.jpg" class="image_cordi">
+			<img src="images/minion.jpg" class="image_cordi">
 			<h1 class="head2">Namea deama 1</h1>
 			<h4>About   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis</h4>
 			<div class="contact_links">
@@ -208,7 +77,7 @@
 			</div>
 		</div>
 		<div id="cordi2" class="norm step" data-x="-9000" data-y="2000" data-z="500" data-rotate-y="30" data-rotate-z="0" data-rotate-x="0" data-scale="2 ">
-			<img src="minion.jpg" class="image_cordi">
+			<img src="images/minion.jpg" class="image_cordi">
 			<h1 class="head2">Namea deama 2</h1>
 			<h4>About   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis</h4>
 			<div class="contact_links">
@@ -219,7 +88,7 @@
 			</div>
 		</div>
 		<div id="cordi3" class="norm step" data-x="-9000" data-y="3000" data-z="-500" data-rotate-y="30" data-rotate-z="0" data-rotate-x="0" data-scale="2">
-			<img src="minion.jpg" class="image_cordi">
+			<img src="images/minion.jpg" class="image_cordi">
 			<h1 class="head2">Namea deama 2</h1>
 			<h4>About   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis</h4>
 			<div class="contact_links">
@@ -247,7 +116,7 @@
 		</div>
 		<div id="member2" class="norm step mem" data-x="600" data-y="8000" data-z="13800" data-rotate-y="120" data-rotate-z="0" data-rotate-x="0" data-scale="1">
 			<center>
-			<img src="images/shubham.jpg" width="300px">
+			<img src="images/members/shubham.jpg" width="300px">
 			<h1 class="head3">Shubham Padia</h1>
 			<div class="contact_links">
 					<a href="https://www.facebook.com/padiashubham"><img src='images/social/facebook.png'></a>
@@ -259,7 +128,7 @@
 		</div>
 		<div id="member3" class="norm step mem" data-x="0" data-y="8000" data-z="13400" data-rotate-y="180" data-rotate-z="0" data-rotate-x="0" data-scale="1">
 			<center>
-			<img src="minion.jpg" width="300px">
+			<img src="images/minion.jpg" width="300px">
 			<h1 class="head3">nameas sdfaw</h1>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
@@ -271,7 +140,7 @@
 		</div>
 		<div id="member4" class="norm step mem" data-x="-600" data-y="8000" data-z="13800" data-rotate-y="240" data-rotate-z="0" data-rotate-x="0" data-scale="1">
 			<center>
-			<img src="minion.jpg" width="300px">
+			<img src="images/minion.jpg" width="300px">
 			<h1 class="head3">nameas sdfaw</h1>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
@@ -283,7 +152,7 @@
 		</div>
 		<div id="member5" class="norm step mem" data-x="-700" data-y="8000" data-z="14500" data-rotate-y="300" data-rotate-z="0" data-rotate-x="0" data-scale="1">
 			<center>
-			<img src="minion.jpg" width="300px">
+			<img src="images/minion.jpg" width="300px">
 			<h1 class="head3">nameas sdfaw</h1>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
