Aditya dewan added

--- a/try.html
+++ b/try.html
@@ -128,8 +128,8 @@
 		</div>
 		<div id="member3" class="norm step mem" data-x="0" data-y="8000" data-z="13400" data-rotate-y="180" data-rotate-z="0" data-rotate-x="0" data-scale="1">
 			<center>
-			<img src="images/minion.jpg" width="300px">
-			<h1 class="head3">nameas sdfaw</h1>
+			<img src="images/members/dewan.jpg" width="300px">
+			<h1 class="head3">Aditya Dewan</h1>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
 					<img src='images/social/github.png'>
@@ -161,6 +161,14 @@
 					<img src='images/social/twitter.png'>
 			</div>
 			</center>
+		</div>
+		<div class="norm step " data-x="-700" data-y="5000" data-z="500" data-rotate-y="300" data-rotate-z="200" data-rotate-x="200" data-scale="2">
+			<h2 class="head3">Why be with us ?</h2>
+		</div>
+		<div class="norm step ">
+			<center>
+			<h1 class="head1">We do <br><u><b>Cool stuff that Matters</b></u></h1>
+		</center>
 		</div>
 
 	</div>
