Added files - Yogesh

--- a/try.html
+++ b/try.html
@@ -32,7 +32,7 @@
 				<h2><a href="#about_us">About Us</a></h2>
 				<h2><a href="#events">Events</a></h2>
 				<h2><a href="#coordinators">Co-ordinators</a></h2>
-				<h2><a href="#members">members</a></h2>
+				<h2><a href="#members">Members</a></h2>
 			</span>
 			<center>
 				<div class="hint">
@@ -77,9 +77,11 @@
 			</div>
 		</div>
 		<div id="cordi2" class="norm step" data-x="-9000" data-y="2000" data-z="500" data-rotate-y="30" data-rotate-z="0" data-rotate-x="0" data-scale="2 ">
-			<img src="images/minion.jpg" class="image_cordi">
-			<h1 class="head2">Namea deama 2</h1>
-			<h4>About   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis</h4>
+			<img src="images/yogesh.jpg" class="image_cordi">
+			<h1 class="head2">Yogesh Gupta</h1>
+			<h4>
+				Front End Developer, UI Designer, enthusiastic about web technologies and a student like you.
+			</h4>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
 					<img src='images/social/github.png'>
