--- a/try.html
+++ b/try.html
@@ -142,8 +142,8 @@
 		</div>
 		<div id="member4" class="norm step mem" data-x="-600" data-y="8000" data-z="13800" data-rotate-y="240" data-rotate-z="0" data-rotate-x="0" data-scale="1">
 			<center>
-			<img src="images/minion.jpg" width="300px">
-			<h1 class="head3">nameas sdfaw</h1>
+			<img src="images/members/akhare.jpg" width="300px">
+			<h1 class="head3">Abhinav Khare</h1>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
 					<img src='images/social/github.png'>
