--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!--main stuff here-->
 	<div id="pre-loader">
 		<center>
-			<img src="loader.gif">
+			<img src="images/loader.gif">
 		</center>
 	</div>
 
@@ -154,8 +154,8 @@
 		</div>
 		<div id="member5" class="norm step mem" data-x="-700" data-y="8000" data-z="14500" data-rotate-y="300" data-rotate-z="0" data-rotate-x="0" data-scale="1">
 			<center>
-			<img src="images/minion.jpg" width="300px">
-			<h1 class="head3">nameas sdfaw</h1>
+			<img src="images/members/12998208_1775686592660794_1048034084067191857_o.jpg" width="300px">
+			<h1 class="head3">Neha Kandapal</h1>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
 					<img src='images/social/github.png'>
