--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
 			<h3> Conduct Workshops And Create Projects</h3>
 			<p>Web Development Wing also conducts workshops to help students understand the basics of web development . It also works on projects contributing towards the welfare of the institute and the society. </p>
 		</div>
-
+		
 		<div id="coordinators" class="norm step" data-x="-9000" data-y="0" data-z="0" data-rotate-y="30" data-rotate-z="0" data-rotate-z="0" data-scale="3">
 			<h1 class="head1">Co-ordinators</h1>
 		</div>
+
 		<div id="cordi1" class="norm step" data-x="-9000" data-y="1000" data-z="-500" data-rotate-y="30" data-rotate-z="0" data-rotate-x="0" data-scale="2 ">
-			<img src="images/minion.jpg" class="image_cordi">
-			<h1 class="head2">Namea deama 1</h1>
-			<h4>About   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis</h4>
+			<img src="images/aditya.jpg" class="image_cordi">
+			<h1 class="head2">Aditya Kumawat</h1>
+			<h4>Backend  developer now enjoying life as a MEAN Stack programmer, also a sports enthusiast.</h4>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
 					<img src='images/social/github.png'>
@@ -78,7 +79,7 @@
 		</div>
 		<div id="cordi2" class="norm step" data-x="-9000" data-y="2000" data-z="500" data-rotate-y="30" data-rotate-z="0" data-rotate-x="0" data-scale="2 ">
 			<img src="images/yogesh.jpg" class="image_cordi">
-			<h1 class="head2">Yogesh Gupta</h1>
+			<h1 class="head2">Yogesh Gupta (Yogi Sir)</h1>
 			<h4>
 				Front End Developer, UI Designer, enthusiastic about web technologies and a student like you.
 			</h4>
@@ -90,9 +91,10 @@
 			</div>
 		</div>
 		<div id="cordi3" class="norm step" data-x="-9000" data-y="3000" data-z="-500" data-rotate-y="30" data-rotate-z="0" data-rotate-x="0" data-scale="2">
-			<img src="images/minion.jpg" class="image_cordi">
-			<h1 class="head2">Namea deama 2</h1>
-			<h4>About   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sagittis</h4>
+			<img src="images/bharat.jpg" class="image_cordi">
+			<h1 class="head2">Bharat Gupta</h1>
+			<h3 class="spec">Senior Member</h3>
+			<h4>Developer | UI enthusiast </h4>
 			<div class="contact_links">
 					<img src='images/social/facebook.png'>
 					<img src='images/social/github.png'>
